[routes][1.1] Update query transaction with apikey
